--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
     <div id="coverImg"></div>
-
+    <div><h1 class="homeH">Hi I'm</h1></div>
+    <div><h1 class="homeN">Tahmid Hasan.</h1></div>
+    
     <header>
         <nav id="navBar">
           <ul class="navButtons">
@@ -23,18 +25,17 @@
         </nav>
       </header>
 
+      <!--
+
       <div class="infoTabs">
           <h3><a class="resume" href="">View Resume</a></h3>
           <h3><a class="contact" href="">Contact</a></h3>
           <h3><a class="blah" href="">Blah</a></h3>
       </div>
-
-    
-    </div>
+      -->
 
     <div id="aboutPage">
-        <h1 class="aboutH "><a>About Me</a></h1>
-        <h1 class="name">Tahmid Hasan</h1>
+        <h1 class="aboutH ">About Me</h1>
         <img class="profileImg" src="TahmidProfile.jpg" alt="profile pic">
         <h3 class="content">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum explicabo doloremque consequatur assumenda laudantium! Dolore cumque repellendus distinctio nesciunt, vero impedit quidem. Reprehenderit atque voluptatum odit voluptates dolore perferendis veniam.</h3>
         <p class="descriptionA">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eligendi et unde velit mollitia, voluptatum saepe illum maiores omnis quidem, voluptate aperiam beatae, possimus voluptas quisquam dolorum recusandae laboriosam molestiae. nihil iusto quo quam laboriosam commodi culpa corrupti libero. Sequi, magnam. ur adipisicing elit. Autem maxime repellat error corporis, voluptatibus aperiam? Reprehenderit eos dicta vitae fugit ab voluptas facilis, ullam est reiciendis rerum sequi optio odit. Reprehenderit repellendus qui ad! Error maiores ut voluptates dignissimos temporibus molestias ipsa numquam officia eveniet, exercitationem quisquam placeat a odio esse magnam?</p>
