New Experience page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="coverImg"></div>
     <div><h1 class="homeH">Hi I'm</h1></div>
+    <hr class="vert">
     <div><h1 class="homeN">Tahmid Hasan.</h1></div>
     
     <header>
@@ -18,9 +19,11 @@
           <ul class="navButtons">
             <li><a class="home" href="#coverImg">Home</a></li>
             <li><a class="about" href="#aboutPage">About</a></li>
-            <li><a class="projects" href="#projPage">Projects</a></li>
             <li><a class="experience" href="#expPage">Experience</a></li>
-            <li><a class="education" href="#educPage">Education</a></li>
+            <li><a class="skills" href="#skillsPage">Skills</a></li>
+            <li><a class="projects" href="#projPage">Projects</a></li>
+            <li><a class="interests" href="#interestsPage">Interests</a></li>
+            <li><a class="contactMe" href="#contactPage">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -41,20 +44,49 @@
         <p class="descriptionA">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eligendi et unde velit mollitia, voluptatum saepe illum maiores omnis quidem, voluptate aperiam beatae, possimus voluptas quisquam dolorum recusandae laboriosam molestiae. nihil iusto quo quam laboriosam commodi culpa corrupti libero. Sequi, magnam. ur adipisicing elit. Autem maxime repellat error corporis, voluptatibus aperiam? Reprehenderit eos dicta vitae fugit ab voluptas facilis, ullam est reiciendis rerum sequi optio odit. Reprehenderit repellendus qui ad! Error maiores ut voluptates dignissimos temporibus molestias ipsa numquam officia eveniet, exercitationem quisquam placeat a odio esse magnam?</p>
     </div>
 
+    <div id="expPage">
+        <h1 class="expH"><a>Experience</a></h1>
+        <h2 class="expSubH">Inspirational quote here lmao</h2>
+        <hr class="expHr">
+        <h1 class="educH">Education</h1>
+        <div class="expFirst">
+            <h3 class="firstExp">First Experience</h3>
+            <h3 class="firstExpLoc">Georgia Tech</h3>
+            <h4 class="firstExpDate">Aug 2014 - Aug 2020</h4>
+            <p class="descriptionEF">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit.?</p>
+
+        </div>
+
+        <div class="expSecond">
+            <h3 class="secondExp">Second Experience</h3>
+            <h3 class="secondExpLoc"> Veeva Toronto</h3>
+            <h4 class="secondExpDate">June 2014 - June 2020</h4>
+            <p class="descriptionES">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit.?</p>
+
+        </div>
+
+        <div class="expThird">
+            <h3 class="thirdExp">Third Experience</h3>
+            <h3 class="thirdExpLoc">Pfiezer Atlanta</h3>
+            <h4 class="thirdExpDate">Feb 2014 - Feb 2020</h4>
+            <p class="descriptionET">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit.?</p>
+        </div>
+
+    </div>
+
+    <div id="skillsPage">
+        <h1 class="skillsH">Skills</h1>
+        <p class="descriptionS">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eligendi et unde velit mollitia, voluptatum saepe illum maiores omnis quidem, voluptate aperiam beatae, possimus voluptas quisquam dolorum recusandae laboriosam molestiae. nihil iusto quo quam laboriosam commodi culpa corrupti libero. Sequi, magnam. ur adipisicing elit. Autem maxime repellat error corporis, voluptatibus aperiam? Reprehenderit eos dicta vitae fugit ab voluptas facilis, ullam est reiciendis rerum sequi optio odit. Reprehenderit repellendus qui ad! Error maiores ut voluptates dignissimos temporibus molestias ipsa numquam officia eveniet, exercitationem quisquam placeat a odio esse magnam?</p>
+    </div>
+
     <div id="projPage">
         <h1 class="projH ">My Projects</h1>
         <p class="descriptionP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eligendi et unde velit mollitia, voluptatum saepe illum maiores omnis quidem, voluptate aperiam beatae, possimus voluptas quisquam dolorum recusandae laboriosam molestiae. nihil iusto quo quam laboriosam commodi culpa corrupti libero. Sequi, magnam. ur adipisicing elit. Autem maxime repellat error corporis, voluptatibus aperiam? Reprehenderit eos dicta vitae fugit ab voluptas facilis, ullam est reiciendis rerum sequi optio odit. Reprehenderit repellendus qui ad! Error maiores ut voluptates dignissimos temporibus molestias ipsa numquam officia eveniet, exercitationem quisquam placeat a odio esse magnam?</p>
     </div>
 
-
-    <div id="expPage">
-        <h1 class="expH"><a>Experience</a></h1>
-        <p class="descriptionE">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eligendi et unde velit mollitia, voluptatum saepe illum maiores omnis quidem, voluptate aperiam beatae, possimus voluptas quisquam dolorum recusandae laboriosam molestiae. nihil iusto quo quam laboriosam commodi culpa corrupti libero. Sequi, magnam. ur adipisicing elit. Autem maxime repellat error corporis, voluptatibus aperiam? Reprehenderit eos dicta vitae fugit ab voluptas facilis, ullam est reiciendis rerum sequi optio odit. Reprehenderit repellendus qui ad! Error maiores ut voluptates dignissimos temporibus molestias ipsa numquam officia eveniet, exercitationem quisquam placeat a odio esse magnam?</p>
-    </div>
-
-    <div id="educPage">
-        <h1 class="educH">Education</h1>
-        <p class="descriptionED">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eligendi et unde velit mollitia, voluptatum saepe illum maiores omnis quidem, voluptate aperiam beatae, possimus voluptas quisquam dolorum recusandae laboriosam molestiae. nihil iusto quo quam laboriosam commodi culpa corrupti libero. Sequi, magnam. ur adipisicing elit. Autem maxime repellat error corporis, voluptatibus aperiam? Reprehenderit eos dicta vitae fugit ab voluptas facilis, ullam est reiciendis rerum sequi optio odit. Reprehenderit repellendus qui ad! Error maiores ut voluptates dignissimos temporibus molestias ipsa numquam officia eveniet, exercitationem quisquam placeat a odio esse magnam?</p>
+    <div id="interestsPage">
+        <h1 class="interestsH">Interests</h1>
+        <p class="descriptionI">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eligendi et unde velit mollitia, voluptatum saepe illum maiores omnis quidem, voluptate aperiam beatae, possimus voluptas quisquam dolorum recusandae laboriosam molestiae. nihil iusto quo quam laboriosam commodi culpa corrupti libero. Sequi, magnam. ur adipisicing elit. Autem maxime repellat error corporis, voluptatibus aperiam? Reprehenderit eos dicta vitae fugit ab voluptas facilis, ullam est reiciendis rerum sequi optio odit. Reprehenderit repellendus qui ad! Error maiores ut voluptates dignissimos temporibus molestias ipsa numquam officia eveniet, exercitationem quisquam placeat a odio esse magnam?</p>
     </div>
 
     <div id="contactPage">
