--- a/index.html
+++ b/index.html
@@ -139,7 +139,12 @@
 
         <div id="projPage">
             <h1 class="projH ">My Projects</h1>
-            <p class="descriptionP">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum, dolor sit amet consectet Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur earum placeat rerum, et, dignissimos autem similique ducimus repellendus iure Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus eligendi et unde velit mollitia, voluptatum saepe illum maiores omnis quidem, voluptate aperiam beatae, possimus voluptas quisquam dolorum recusandae laboriosam molestiae. nihil iusto quo quam laboriosam commodi culpa corrupti libero. Sequi, magnam. ur adipisicing elit. Autem maxime repellat error corporis, voluptatibus aperiam? Reprehenderit eos dicta vitae fugit ab voluptas facilis, ullam est reiciendis rerum sequi optio odit. Reprehenderit repellendus qui ad! Error maiores ut voluptates dignissimos temporibus molestias ipsa numquam officia eveniet, exercitationem quisquam placeat a odio esse magnam?</p>
+            <hr class="skillsHr">
+
+            <a class="proj1" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/"><img class="img" src="proj1.png" alt="proj1"></a>
+            <a class="proj2" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/"><img class="img" src="proj1.png" alt="proj2"></a>
+            <a class="proj3" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/"><img class="img" src="proj1.png" alt="proj3"></a>
+            <a class="proj4" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/" target=""><img class="img" src="proj1.png" alt="proj4"></a>
         </div>
 
         <div id="interestsPage">
