--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
             <h1 class="projH ">My Projects</h1>
             <hr class="skillsHr">
 
-            <a class="proj1" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/"><img class="img" src="proj1.png" alt="proj1"></a>
-            <a class="proj2" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/"><img class="img" src="proj1.png" alt="proj2"></a>
-            <a class="proj3" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/"><img class="img" src="proj1.png" alt="proj3"></a>
-            <a class="proj4" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/" target=""><img class="img" src="proj1.png" alt="proj4"></a>
+            <a class="proj1" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/" target="_blank"><img class="img" src="proj1.png" alt="proj1"></a>
+            <a class="proj2" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/" target="_blank"><img class="img" src="proj1.png" alt="proj2"></a>
+            <a class="proj3" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/" target="_blank"><img class="img" src="proj1.png" alt="proj3"></a>
+            <a class="proj4" href="https://sproutsocial.com/insights/social-media-image-sizes-guide/" target="_blank"><img class="img" src="proj1.png" alt="proj4"></a>
         </div>
 
         <div id="interestsPage">
